--- a/index.html
+++ b/index.html
@@ -12,17 +12,25 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico"> 
 
 
-  <!-- ضع العنوان الخاص بك هنا  -->
-  <title> غير هذا النص </title> 
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص"> 
-  <meta property="og:title" content="غير هذا النص">
+  <!-- Telcel
+  -->
+  <title> Telcel
+</title> 
+  <meta name="title" content="Telcel
+">
+  <meta property="twitter:title" content="Telcel
+"> 
+  <meta property="og:title" content="Telcel
+">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
-  <meta name="description" content="غير هذا النص">
-  <meta property="og:description" content="غير هذا النص">
-  <meta property="twitter:description" content="غير هذا النص">
+  <meta name="description" content="Telcel
+">
+  <meta property="og:description" content="Telcel
+">
+  <meta property="twitter:description" content="Telcel
+">
 
   <!-- ضع الرابط المرفوع عليه الموقع -->
   <meta property="og:url" content="ضع الرابط كامل">
